# AskDB

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPLETE_ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TECHNICAL_ENGINEERING_GUIDE.md  docker-compose.yml  implementation_plan.md
backend/: .env.example  Dockerfile  alembic.ini  debug_pipeline.py  pyproject.toml  requirements.txt  test_bug_fixes.py  test_coercion.py  test_e2e_generator.py  test_phase1_stabilization.py  test_phase2_aggregation.py  test_phase2_ranking.py  test_phase3_semantic.py  test_phase421_window_cleanup.py  test_phase43_analytical_window.py  test_phase4_window_planning.py  test_phase4_window_sql.py  test_phase51_time_planning.py  test_phase52_time_sql.py  test_requirement_9_queries.py  test_schema_aware.py  test_sql_generator_v2.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  2026-6-19_fec1613bb76d_update_search_history_model.py  2026-7-1_d81978de9124_add_full_name_and_is_active_to_users.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/auth/: dependencies.py  jwt.py  repository.py  router.py  security.py  service.py
backend/app/constants/: enums.py
backend/app/core/: config.py  llm.py
backend/app/database/: base.py  connection.py  session.py
backend/seed/: data_generators.py  factory.py  generate_fake_data.py  seed_database.py
backend/tests/: test_phase61_subquery_planning.py  test_phase62_subquery_sql.py  test_phase63_correlated_subqueries.py  test_planner_queries.py  test_planner_unit.py
(+110 files in other folders)
