[tool.poetry]
name = "askdb"
version = "0.1.0"
description = "AskDB API"
authors = ["Admin <admin@example.com>"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
